# ais-taxi-rides-am

./: .gitignore  Dockerfile  build-image-github.sh  build-image.sh  logging.conf  pyproject.toml  run-container-github.sh  run-container.sh
.github/workflows/: build.yml
notebooks/: taxi-ride-outlier-detection.ipynb
taxi_rides_outlier_detection/: cli.py  outlier_detector.py
tests/taxi_rides_outlier_detection/: taxi_ride_test_data.parquet  test_fixtures.py  test_outlier_detector.py
work/: 2025-01-01.taxi-rides.parquet  2025-01-14.taxi-rides.parquet  2025-01-15.taxi-rides.parquet
