[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-dev2il-mlops-taxi-rides"
version = "1.0.0"
requires-python = ">=3.13.0"
dependencies = [
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    "pyarrow==19.0.1",
    "fastparquet==2024.11.0",
    "matplotlib==3.10.1",
    "click==8.1.8"
]

[project.optional-dependencies]
dev = [
    "ipykernel==6.29.5",
    "notebook==7.3.3"
]
test = [
    "pytest==8.3.5"
]

[tool.setuptools]
packages = ["taxi_rides_outlier_detection"]
include-package-data = true

[project.scripts]
detect-taxi-ride-outliers = "taxi_rides_outlier_detection.cli:detect_outliers"
